@@ -1,0 +1,1 @@
+cdecl | /dev/null | | define SI as auto int | 65
