@@ -1,0 +1,1 @@
+cdecl | /dev/null | | define SI as extern int | 65
