@@ -1,0 +1,1 @@
+cdecl | /dev/null | | define SI as static int | 65
