@@ -1,0 +1,1 @@
+cdecl | /dev/null | | typedef auto int SI | 65
