@@ -1,0 +1,1 @@
+cdecl | /dev/null | | typedef extern int SI | 65
