@@ -1,0 +1,1 @@
+cdecl | /dev/null | | typedef register int SI | 65
