@@ -1,0 +1,1 @@
+cdecl | /dev/null | | typedef static int SI | 65
