@@ -25,6 +25,11 @@ atomic_int_least8_t, atomic_int_least16_t, atomic_int_least32_t,
 atomic_int_least64_t, atomic_uint_least8_t, atomic_uint_least16_t,
 atomic_uint_least32_t, and atomic_uint_least64_t.
 
+** Fixed typedef and define commands with storage classes
+Typedef and define now prohibit storage classes, e.g.:
+    typedef static int sint;
+is now correctly reported as an error.
+
 
 * Changes in Cdecl 4.0
 
